AWS-TERRAFORM/DAY14-VPC-EC2-NGINX-HTTP_ACCESS/tf-vpc-ec2-nginx-http-access/internet-gateway.tf
resource "aws_internet_gateway" "my_vpc_igw" {
  vpc_id = aws_vpc.my_vpc.id
  tags = {
    Name = "my_vpc_igw"
  }
}
